@@ -8,6 +8,12 @@ Forge Beta: 07-##-2013 ver 1.4.4
 Release Notes
 -------------
 
+-Improvements to color/card Type filters
+You can now right-click on a color filter button to show only cards of that color, filtering out all other colors. Similar with card type filter buttons.
+
+In addition, fixed bug where middle and right clicking buttons did the same behavior as left clicking, and fixed bug where clicking multiple buttons quickly (such as filters) while moving the mouse around would result in clicks not registering sometimes.
+
+
 - Card Zoomer -
 Now you can gaze at your HQ images in all their glory with just a flick of the mousewheel. This feature will also increase the size of low quality pics up to the size used be the high quality pics, but the image will not be very clear.
 
